Porting Speck Encryption

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_definitions(-DN2N_VERSION=\"${N2N_VERSION}\" -DN2N_OSNAME=\"${N2N_OSNAME}\")
 
 # N2n specific params
 if(NOT DEFINED N2N_OPTION_AES)
-set(N2N_OPTION_AES OFF)
+set(N2N_OPTION_AES ON)
 endif(NOT DEFINED N2N_OPTION_AES)
 
 if(N2N_OPTION_AES)
@@ -28,13 +28,13 @@ elseif(USE_MBEDTLS)
         set(CRYPTO_LIB mbedcrypto)
 elseif(USE_OPENSSL)
         add_definitions(-DUSE_OPENSSL=1)
-        if(OPENSSL_INCLUDE_DIR)  
-            include_directories(${OPENSSL_INCLUDE_DIR})  
-        endif()  
-        if(OPENSSL_CRYPTO_LIBRARY)  
-            set(CRYPTO_LIB ${OPENSSL_CRYPTO_LIBRARY})  
-        else()  
-            set(CRYPTO_LIB crypto)  
+        if(OPENSSL_INCLUDE_DIR)
+            include_directories(${OPENSSL_INCLUDE_DIR})
+        endif()
+        if(OPENSSL_CRYPTO_LIBRARY)
+            set(CRYPTO_LIB ${OPENSSL_CRYPTO_LIBRARY})
+        else()
+            set(CRYPTO_LIB crypto)
         endif()
 elseif(USE_ELL)
         add_definitions(-DUSE_ELL=1)
@@ -52,20 +52,8 @@ endif(NOT DEFINED BUILD_SHARED_LIBS)
 if(NOT DEFINED CMAKE_BUILD_TYPE)
 set(CMAKE_BUILD_TYPE None)
 endif(NOT DEFINED CMAKE_BUILD_TYPE)
-#set(CMAKE_BUILD_TYPE Debug)
-#set(CMAKE_BUILD_TYPE Release)
 
-#Ultrasparc64 users experiencing SIGBUS should try the following gcc options
-#(thanks to Robert Gibbon) 
-#PLATOPTS_SPARC64=-mcpu=ultrasparc -pipe -fomit-frame-pointer -ffast-math -finline-functions -fweb -frename-registers -mapp-regs
-
-## DEBUG FOR CMAKE
-#message(${N2N_VERSION}) 
-#message(${N2N_OSNAME})
-##message(${CMAKE_BUILD_TYPE})
-#message(${N2N_OPTION_AES})
-## DEBUG FOR CMAKE
-
+# Create an n2n object library
 add_library(n2n OBJECT
         n2n.c
         wire.c
@@ -101,9 +89,11 @@ add_executable(edge
         edge.c
         aes.c
         twofish.c
+        speck.c
         transform_null.c
         transform_tf.c
         transform_aes.c
+        transform_speck.c
         n2n_keyfile.c
         minilzo.c
         tuntap_freebsd.c
@@ -112,17 +102,28 @@ add_executable(edge
         tuntap_osx.c
         ${OBJECTS} ${EDGE_RESOURCE}
 )
-##if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-##        target_link_libraries(edge cap)
-##endif()
 set_property(TARGET edge PROPERTY C_STANDARD 99)
 
 # Build supernode executable
 add_executable(supernode
         sn.c
+        aes.c
+        twofish.c
+        speck.c
+        transform_null.c
+        transform_tf.c
+        transform_aes.c
+        transform_speck.c
+        n2n_keyfile.c
         ${OBJECTS} ${SN_RESOURCE}
 )
 set_property(TARGET supernode PROPERTY C_STANDARD 99)
+
+# Fixed: Link pthread and dl for static builds with OpenSSL
+if(N2N_OPTION_AES AND USE_OPENSSL AND NOT WIN32)
+    target_link_libraries(edge pthread dl)
+    target_link_libraries(supernode pthread dl)
+endif()
 
 # Windows-specific configuration
 if(DEFINED WIN32)
@@ -135,12 +136,9 @@ add_custom_command(
 )
 endif(DEFINED WIN32)
 
-# For Solaris (or OpenSolaris?)
-#target_link_libraries(edge socket nsl)
-#target_link_libraries(supernode socket nsl)
-
 if(N2N_OPTION_AES)
 target_link_libraries(edge ${CRYPTO_LIB})
+target_link_libraries(supernode ${CRYPTO_LIB})
 endif(N2N_OPTION_AES)
 
 if(NOT DEFINED WIN32)
